# yaml2ics

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  RELEASE.md  pyproject.toml  requirements.txt  yaml2ics.py
.github/workflows/: coverage.yml  lint.yml  python-app.yml  release.yml  test.yaml  test.yml
example/: another_calendar.yaml  test_calendar.yaml
tests/: test_calendar.py  test_cli.py  test_events.py  test_include.py  util.py
