[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "yaml2ics"
version = "0.3rc0.dev0"
requires-python = ">=3.8"
authors = [{name = "Scientific Python Developers"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
description = "CLI to convert yaml into ics."

dependencies = [
    "ics == 0.8.0.dev0",
    "python-dateutil >= 2.8",
    "pyyaml >= 6",
]

[project.optional-dependencies]
test = ["pytest >= 7.3", "pytest-cov >= 4.0"]
lint = ["pre-commit >= 3.0"]

[project.scripts]
yaml2ics = "yaml2ics:cli"

[project.urls]
Home = "https://github.com/scientific-python/yaml2ics"
Source = "https://github.com/scientific-python/yaml2ics"

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["F", "E", "W", "I", "UP"]
